fixed responsive spacing of post sub information (read time and auther) on post show, fixed sizing of primary background image and spacing on post show, fixed border below post show

--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -57,7 +57,7 @@ body {
 
   p {
     margin-bottom: 30px;
-    line-height: 28px;
+    line-height: 30px;
   }
 
   blockquote {
