--- a/app/assets/stylesheets/navigation.css.scss
+++ b/app/assets/stylesheets/navigation.css.scss
@@ -22,6 +22,10 @@
 	font-weight: 400;
 	font-size: 1.25em;
   font-family: 'Raleway', Arial, sans-serif;
+	-webkit-box-shadow: 0px -2px 14px 1px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px -2px 14px 1px rgba(0,0,0,0.75);
+	box-shadow: 0px -2px 14px 1px rgba(0,0,0,0.75);
+	z-index: 10;
 
 	a:hover, a:focus {
 	  color: $primary-grey;
