--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -44,32 +44,33 @@
 
 .full-divider {
   border-top: 5px solid $secondary-grey;
+  margin-top: 85px;
 }
 
 .post-landing {
   position:relative;
-  height: 100vh;
+  height: calc(100vh - 85px);
+  top:85px;
   right: 0;
   left: 0;
-  -webkit-box-shadow: inset 0px -52px 273px 10px rgba(51,51,51,0.3);
-  -moz-box-shadow: inset 0px -52px 273px 10px rgba(51,51,51,0.3);
-  box-shadow: inset 0px -52px 273px 10px rgba(51,51,51,0.3);
 
   .post-details {
-    position: relative;
-    top: 83%;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    height: 37px;
 
     h5 {
+      position: absolute;
       display: inline;
       text-shadow: 0px 0px 4px rgba(10, 10, 10, 0.8);
     }
     h5:first-child {
-      float: left;
       padding-left: 20px;
     }
     h5:last-child {
-      float: right;
       padding-right: 20px;
+      right: 0;
     }
   }
 
